k8s/infrastructure/network/policies/infrastructure/kubechecks/allow-kubechecks-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubechecks-access
  namespace: kubechecks
  labels:
    policy-type: infrastructure-audit
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubechecks
  description: "Allow Kubechecks access"
  ingress:
  - fromEntities:
    - host
    - remote-node
    - ingress
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "6443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        app.kubernetes.io/name: argocd-server
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        app.kubernetes.io/name: argocd-repo-server
    toPorts:
    - ports:
      - port: "8081"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
